refactor: using toList