@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BookService {
@@ -103,6 +102,6 @@ public class BookService {
         return book.getAuthors()
                 .stream()
                 .map(author -> new AuthorResponse(author.getId(), author.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
